samples/_failures_safe/1761728744_1247a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba28a38c.c: In function ‘main’:
./samples/SAFE/__tmp_ba28a38c.c:137:12: error: expected declaration or statement at end of input
  137 |     struct LogAnalyzer analyzer;
      |            ^~~~~~~~~~~
